--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -76,7 +76,7 @@ bind = , Print,  exec, hyprshot -z -m region -o ~/Pictures/screenshots
 $hyprscripts= ~/.config/hypr/scripts
 bind = $mod, V, exec, $hyprscripts/scratchpads.sh volume
 bind = $mod, P, exec, $hyprscripts/scratchpads.sh password
-#bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
+bind = $mod, M, exec, $hyprscripts/scratchpads.sh music
 bind = $mod, G, exec, $hyprscripts/scratchpads.sh launchers
 bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 
