--- a/config/hypr/hyprland/rules.conf
+++ b/config/hypr/hyprland/rules.conf
@@ -11,8 +11,8 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = size 50% 60%, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 50% 60%, class:^(Bitwarden)$
 windowrulev2 = size 50% 65%, class:^(spotube)$
-#windowrulev2 = size 50% 65%, title:^(Spotify)$
-#windowrulev2 = size 50% 65%, title:^(Spotify Free)$
+windowrulev2 = size 50% 65%, title:^(Spotify)$
+windowrulev2 = size 50% 65%, title:^(Spotify Free)$
 windowrulev2 = size 50% 65%, class:^(xdg-desktop-portal-gtk)$
 
 # Floating
@@ -20,8 +20,8 @@ windowrulev2 = float,  title:^(Confirm File Replacing)$
 windowrulev2 = float,  class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float,  class:^(Friends List)$
 windowrulev2 = float,  class:^(spotube)$
-#windowrulev2 = float, title:^(Spotify)$
-#windowrulev2 = float, title:^(Spotify Free)$
+windowrulev2 = float,  title:^(Spotify)$
+windowrulev2 = float,  title:^(Spotify Free)$
 windowrulev2 = float,  class:^(Bitwarden)$
 windowrulev2 = float,  class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,  class:^(org.gnome.Calculator)$
