--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,3 @@
-# Enable mouse support
 set -g mouse on
 set -sg escape-time 10
 setw -g mode-keys vi
@@ -11,9 +10,6 @@ setw -g mode-keys vi
 
 bind r source-file ~/dotfiles/config/tmux/tmux.conf \; display "Config reloaded!"
 
-bind % split-window -h
-bind '"' split-window -v
-
 bind -n M-h resize-pane -L 5
 bind -n M-j resize-pane -D 5
 bind -n M-k resize-pane -U 5
@@ -22,12 +18,13 @@ bind -n M-l resize-pane -R 5
 # bind Ctrl + F to run a script
 bind-key -r f run-shell "tmux neww tmux-sessionizer"
 
+## BAR
 set -g status-position top
 set -g status-justify left
 set -g status-left '#[bg=green]#[fg=black]  #S '
 set -g status-left-length 32
 set -g status-style bg=default
-set -g status-right '#[bg=yellow]#[fg=black] %R '
+set -g status-right '#[fg=white] %R '
 set -g status-interval 60
 
 set -g pane-active-border-style fg=green
@@ -35,6 +32,17 @@ set -g pane-border-style fg=black
 
 set -g window-status-format '#[bg=none]#[fg=white] [#I] #W '
 set -g window-status-current-format '#[bg=blue]#[fg=black] [#I] #W '
+
+## TMUX-SENSIBLE
+set -s escape-time 0
+set -g history-limit 50000
+set -g display-time 4000
+set -g status-interval 5
+set -g focus-events on
+setw -g aggressive-resize on
+
+
+## PLUGINS
 
 set -g @plugin 'tmux-plugins/tpm'
 
