--- a/config/book/personal.conf
+++ b/config/book/personal.conf
@@ -1,3 +1,6 @@
+[config]
+    run = "flatpak run io.github.zen_browser.zen -p Personal --new-tab"
+
 [bookmarks]
     "wysi"                      "https://wysi727.com"
     "Personal Site Marti"       "https://m4rti.dev"
@@ -12,8 +15,8 @@
     "Chat GPT AI"               "https://chat.openai.com"
     "Discord App"               "https://discord.com/app"
     "YouTube"                   "https://youtube.com"
-    "https://flathub.org"
-    "lofi"                      "https://www.youtube.com/watch?v=jfKfPfyJRdk"
+    "Flatpak Store"             "https://flathub.org"
+    "Twitch Dashboard"          "https://dashboard.twitch.tv/u/m4rti_dev/stream-manager"
 
     * GitHub
         "GitHub Profile Marti"  "https://github.com/m4rti21"
