--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -24,14 +24,14 @@ set -g status-justify left
 set -g status-left '#[bg=green]#[fg=black]  #S '
 set -g status-left-length 32
 set -g status-style bg=default
-set -g status-right '#[fg=white] %R '
+set -g status-right '#[bg=yellow]#[fg=black]  %R '
 set -g status-interval 60
 
 set -g pane-active-border-style fg=green
 set -g pane-border-style fg=black
 
-set -g window-status-format '#[bg=none]#[fg=white] [#I] #W '
-set -g window-status-current-format '#[bg=blue]#[fg=black] [#I] #W '
+set -g window-status-format '#[bg=none]#[fg=white] #I) #W '
+set -g window-status-current-format '#[bg=blue]#[fg=black] #I) #W '
 
 ## TMUX-SENSIBLE
 set -s escape-time 0
