--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -21,7 +21,7 @@ bind-key -r f run-shell "tmux neww tmux-sessionizer"
 ## BAR
 set -g status-position top
 set -g status-justify left
-set -g status-left '#[bg=green]#[fg=black]  #S '
+set -g status-left '#[bg=green]#[fg=black]  #S #[bg=default] '
 set -g status-left-length 32
 set -g status-style bg=default
 set -g status-right '#[bg=yellow]#[fg=black]  %R '
@@ -30,8 +30,8 @@ set -g status-interval 60
 set -g pane-active-border-style fg=green
 set -g pane-border-style fg=black
 
-set -g window-status-format '#[bg=none]#[fg=white] #I) #W '
-set -g window-status-current-format '#[bg=blue]#[fg=black] #I) #W '
+set -g window-status-format '#[bg=gray] #[bg=gray]#[fg=black]#I #[bg=black]#[fg=white] #W #[bg=default]#[fg=black]'
+set -g window-status-current-format '#[bg=pink] #[bg=pink]#[fg=black]#I #[bg=black]#[fg=white] #W #[bg=default]#[fg=black]'
 
 ## TMUX-SENSIBLE
 set -s escape-time 0
@@ -41,9 +41,7 @@ set -g status-interval 5
 set -g focus-events on
 setw -g aggressive-resize on
 
-
 ## PLUGINS
-
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
