--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -21,7 +21,7 @@ $cliphist = cliphist list | cut -d' ' -f2- | tofi -c ~/.config/tofi/center.confi
 $music = flatpak run com.spotify.Client
 
 # Programs
-bind = $mod, RETURN, exec, $terminal
+bind = $mod, Return, exec, $terminal
 bind = $mod, R,      exec, $runner
 bind = $mod, E,      exec, $fileManager
 bind = $mod, I,      exec, $browser -p Personal
