--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -4,9 +4,9 @@ font-italic=IBM Plex Mono:size=13:style=Italic
 font-bold-italic=IBM Plex Mono:size=13:style=Bold Italic
 font-size-adjustment=0.5
 line-height=15
-box-drawings-uses-font-glyphs=no
+box-drawings-uses-font-glyphs=yes
 dpi-aware=yes
-pad=8x4                             # optionally append 'center'
+pad=8x4center                             # optionally append 'center'
 
 [url]
 launch=xdg-open ${url}
@@ -16,7 +16,7 @@ protocols=http, https, ftp, ftps, file, gemini, gopher
 lines=5000
 multiplier=3.0
 indicator-position=relative
-indicator-format=""
+indicator-format=-
 
 [cursor]
 blink=yes
