--- a/config/hypr/hyprland/setups/comas.conf
+++ b/config/hypr/hyprland/setups/comas.conf
@@ -8,7 +8,7 @@ monitor = HDMI-A-1, prefered,   auto,       1
 env = MONITOR_PRIMARY, HDMI-A-1
 env = MONITOR_SECONDARY, eDP-1
 
-exec-once = xrandr --output eDP-1 --primary
+# exec-once = xrandr --output eDP-1 --primary
 
 workspace = 1, monitor:HDMI-A-1, persistent:true, default:true
 workspace = 2, monitor:HDMI-A-1, persistent:true
