--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -72,9 +72,9 @@ bind = $modc, RETURN, exec, $hyprscripts/monitors.sh
 # xd
 bind = CTRL_ALT, DELETE, exec, $terminal -e btop
 
-bind = $mod, D, exec, book personal
-bind = $mod, S, exec, book work
-bind = $mod, A, exec, book study
+bind = $mod,  D, exec, book personal
+bind = $mods, D, exec, book work
+bind = $modc, D, exec, book study
 
 # Actions
 bind = $modc, Q, exit
