--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -30,8 +30,8 @@ set -g status-interval 60
 set -g pane-active-border-style fg=green
 set -g pane-border-style fg=black
 
-set -g window-status-format '#[bg=gray] #[bg=gray]#[fg=black]#I #[bg=black]#[fg=white] #W #[bg=default]#[fg=black]'
-set -g window-status-current-format '#[bg=pink] #[bg=pink]#[fg=black]#I #[bg=black]#[fg=white] #W #[bg=default]#[fg=black]'
+set -g window-status-format '#[bg=black]#[fg=white] #I: #W '
+set -g window-status-current-format '#[bg=blue]#[fg=black] #I: #W '
 
 ## TMUX-SENSIBLE
 set -s escape-time 0
