--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,10 +1,14 @@
 set -g mouse on
-set -sg escape-time 10
+set -sg escape-time 0
 setw -g mode-keys vi
-set -g status-right " %R "
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
+set -g history-limit 50000
+set -g display-time 4000
+set -g status-interval 5
+set -g focus-events on
+setw -g aggressive-resize on
 
 setw -g mode-keys vi
 
@@ -21,7 +25,7 @@ bind-key -r f run-shell "tmux neww tmux-sessionizer"
 ## BAR
 set -g status-position top
 set -g status-justify left
-set -g status-left '#[bg=green]#[fg=black]  #S #[bg=default] '
+set -g status-left '#[bg=green]#[fg=black]  #S '
 set -g status-left-length 32
 set -g status-style bg=default
 set -g status-right '#[bg=yellow]#[fg=black]  %R '
@@ -30,21 +34,12 @@ set -g status-interval 60
 set -g pane-active-border-style fg=green
 set -g pane-border-style fg=black
 
-set -g window-status-format '#[bg=black]#[fg=white] #I: #W '
+set -g window-status-format '#[bg=none]#[fg=white] #I: #W '
 set -g window-status-current-format '#[bg=blue]#[fg=black] #I: #W '
-
-## TMUX-SENSIBLE
-set -s escape-time 0
-set -g history-limit 50000
-set -g display-time 4000
-set -g status-interval 5
-set -g focus-events on
-setw -g aggressive-resize on
 
 ## PLUGINS
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.config/tmux/tpm/tpm'
