--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,7 +12,7 @@ setw -g aggressive-resize on
 
 setw -g mode-keys vi
 
-bind r source-file ~/dotfiles/config/tmux/tmux.conf \; display "Config reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
 bind -n M-h resize-pane -L 5
 bind -n M-j resize-pane -D 5
