--- a/config/book/personal.conf
+++ b/config/book/personal.conf
@@ -1,5 +1,5 @@
 [config]
-    run = "flatpak run io.github.zen_browser.zen -p Personal --new-tab"
+    run = "flatpak run io.gitlab.librewolf-community -p Personal --new-tab"
 
 [bookmarks]
     "wysi"                      "https://wysi727.com"
