--- a/config/hypr/hyprland/keybinds.conf
+++ b/config/hypr/hyprland/keybinds.conf
@@ -13,7 +13,7 @@ $moda = SUPER_ALT
 $terminal = foot
 $runner = tofi-drun --drun-launch=true
 # $browser = flatpak run io.gitlab.librewolf-community
-$browser = flatpak run io.github.zen_browser.zen
+$browser = flatpak run io.gitlab.librewolf-community
 $fileManager = $terminal -e lf
 $rssReader = $terminal -e newsboat
 $calculator = flatpak run org.gnome.Calculator
