--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -1,5 +1,5 @@
 font=IBM Plex Mono:size=13:style=Medium
-font-bold=IBM Plex Mono:size=13:style=Bold
+font-bold=IBM Plex Mono:size=13:style=Medium
 font-italic=IBM Plex Mono:size=13:style=Italic
 font-bold-italic=IBM Plex Mono:size=13:style=Bold Italic
 line-height=15
@@ -58,21 +58,79 @@ alpha=0.85
 # search-box-no-match=343434 ff5454  # black-on-red
 # search-box-match=343434 e3c78a     # black-on-yellow
 # urls=e3c78a
-background=000000
-foreground=d4be98
-regular0=45403d
-regular1=ea6962
-regular2=a9b665
-regular3=d8a657
-regular4=7daea3
-regular5=d3869b
-regular6=89b482
-regular7=ddc7a1
-bright0=3c3826
-bright1=f2594b
-bright2=b0b846
-bright3=e9b143
-bright4=80aa9e
-bright5=d3869b
-bright6=8bba7f
-bright7=e2cca9
+
+## GRUVBOX
+# background=000000
+# foreground=d4be98
+# regular0=45403d
+# regular1=ea6962
+# regular2=a9b665
+# regular3=d8a657
+# regular4=7daea3
+# regular5=d3869b
+# regular6=89b482
+# regular7=ddc7a1
+# bright0=3c3826
+# bright1=f2594b
+# bright2=b0b846
+# bright3=e9b143
+# bright4=80aa9e
+# bright5=d3869b
+# bright6=8bba7f
+# bright7=e2cca9
+
+## KANAGAWA
+background=000000   #000000
+foreground=C5C9C5   #C5C9C5
+
+#regular0=090618     #0D0C0C
+#regular1=c34043     #c34043
+#regular2=76946a     #76946a
+#regular3=c0a36e     #c0a36e
+#regular4=7e9cd8     #7e9cd8
+#regular5=957fb8     #957fb8
+#regular6=6a9589     #6a9589
+#regular7=c8c093     #c8c093
+#
+#bright0=727169      #727169
+#bright1=e82424      #e82424
+#bright2=98bb6c      #98bb6c
+#bright3=e6c384      #e6c384
+#bright4=7fb4ca      #7fb4ca
+#bright5=938aa9      #938aa9
+#bright6=7aa89f      #7aa89f
+#bright7=dcd7ba      #dcd7ba
+
+regular0=0D0C0C     #0D0C0C
+regular1=E46876     #E46876
+regular2=87A987     #87A987
+regular3=D7AF87     #D7AF87
+regular4=7FB4CA     #7FB4CA
+regular5=938AA9     #938AA9
+regular6=7AA89F     #7AA89F
+regular7=C5C9C5     #C5C9C5
+bright0=0D0C0C      #0D0C0C
+bright1=E46876      #E46876
+bright2=87A987      #87A987
+bright3=D7AF87      #D7AF87
+bright4=7FB4CA      #7FB4CA
+bright5=938AA9      #938AA9
+bright6=7AA89F      #7AA89F
+bright7=C5C9C5      #C5C9C5
+
+#    "#0D0C0C",
+#    "#C4746E",
+#    "#8A9A7B",
+#    "#C4B28A",
+#    "#8BA4B0",
+#    "#A292A3",
+#    "#8EA4A2",
+#    "#C8C093",
+#    "#A6A69C",
+#    "#E46876",
+#    "#87A987",
+#    "#E6C384",
+#    "#7FB4CA",
+#    "#938AA9",
+#    "#7AA89F",
+#    "#C5C9C5"
