--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -25,10 +25,10 @@ bind-key -r f run-shell "tmux neww tmux-sessionizer"
 ## BAR
 set -g status-position top
 set -g status-justify left
-set -g status-left '#[bg=green]#[fg=black]  #[bg=black]#[fg=white] #S #[bg=default] '
+set -g status-left '#[bg=green]#[fg=black]  #S #[bg=default] '
 set -g status-left-length 32
 set -g status-style 'bg=default'
-set -g status-right '#[bg=yellow]#[fg=black]  #[bg=black]#[fg=white] %R '
+set -g status-right '#[bg=yellow]#[fg=black]  %R '
 set -g status-interval 60
 
 set -g pane-active-border-style 'fg=green'
