--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -2,7 +2,7 @@ font=IBM Plex Mono:size=13:style=Medium
 font-bold=IBM Plex Mono:size=13:style=Medium
 font-italic=IBM Plex Mono:size=13:style=Italic
 font-bold-italic=IBM Plex Mono:size=13:style=Bold Italic
-line-height=15
+line-height=14
 box-drawings-uses-font-glyphs=yes
 dpi-aware=yes
 pad=8x4center                             # optionally append 'center'
@@ -101,7 +101,7 @@ foreground=C5C9C5   #C5C9C5
 #bright6=7aa89f      #7aa89f
 #bright7=dcd7ba      #dcd7ba
 
-regular0=0D0C0C     #0D0C0C
+regular0=121212     #121212
 regular1=E46876     #E46876
 regular2=87A987     #87A987
 regular3=D7AF87     #D7AF87
@@ -109,7 +109,7 @@ regular4=7FB4CA     #7FB4CA
 regular5=938AA9     #938AA9
 regular6=7AA89F     #7AA89F
 regular7=C5C9C5     #C5C9C5
-bright0=0D0C0C      #0D0C0C
+bright0=1C1C1C      #1C1C1C
 bright1=E46876      #E46876
 bright2=87A987      #87A987
 bright3=D7AF87      #D7AF87
