--- a/config/book/study.conf
+++ b/config/book/study.conf
@@ -1,5 +1,5 @@
 [config]
-    run = "flatpak run io.gitlab.librewolf-community -p Study --new-tab"
+    run = "librewolf -p Study --new-tab"
 
 [bookmarks]
     "UOC Dashboard"     "https://aula.uoc.edu"
