--- a/config/hypr/hyprland/envoirment.conf
+++ b/config/hypr/hyprland/envoirment.conf
@@ -4,8 +4,8 @@
 
 # Theme
 env = QT_QPA_PLATFORMTHEME,qt6ct
-env = GTK_THEME,adw-gtk3-custom
-env = ICON_THEME,MoreWaita
+# env = GTK_THEME,adw-gtk3-custom
+# env = ICON_THEME,MoreWaita
 env = XCURSOR_THEME,Banana
 env = XCURSOR_SIZE,42
 env = HYPRCURSOR_THEME,Banana
