--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=adw-gtk3-dark
 gtk-icon-theme-name=MoreWaita
-gtk-font-name=IBM Plex Sans weight=450 11
+gtk-font-name=IBM Plex Sans Medium 11
 gtk-cursor-theme-name=Banana
 gtk-cursor-theme-size=42
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
