--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -2,10 +2,10 @@ font=IBM Plex Mono:size=13:style=Medium
 font-bold=IBM Plex Mono:size=13:style=Medium
 font-italic=IBM Plex Mono:size=13:style=Italic
 font-bold-italic=IBM Plex Mono:size=13:style=Bold Italic
-line-height=15
-box-drawings-uses-font-glyphs=yes
+line-height=16
+box-drawings-uses-font-glyphs=no
 dpi-aware=yes
-pad=8x4center                             # optionally append 'center'
+pad=8x4center  # optionally append 'center'
 
 [url]
 launch=xdg-open ${url}
@@ -24,7 +24,7 @@ blink=yes
 hide-when-typing=yes
 
 [colors]
-alpha=0.8
+alpha=0.9
 # background=080808
 # foreground=ededed
 # flash=7f7f00
@@ -80,7 +80,7 @@ alpha=0.8
 # bright7=e2cca9
 
 ## KANAGAWA
-background=000000   #000000
+background=12120f   #12120f
 foreground=C5C9C5   #C5C9C5
 
 #regular0=090618     #0D0C0C
@@ -101,36 +101,45 @@ foreground=C5C9C5   #C5C9C5
 #bright6=7aa89f      #7aa89f
 #bright7=dcd7ba      #dcd7ba
 
-regular0=333333     #333333
-regular1=E46876     #E46876
-regular2=87A987     #87A987
-regular3=D7AF87     #D7AF87
-regular4=7FB4CA     #7FB4CA
-regular5=938AA9     #938AA9
-regular6=7AA89F     #7AA89F
-regular7=C5C9C5     #C5C9C5
-bright0=333333      #333333
-bright1=E46876      #E46876
-bright2=87A987      #87A987
-bright3=D7AF87      #D7AF87
-bright4=7FB4CA      #7FB4CA
-bright5=938AA9      #938AA9
-bright6=7AA89F      #7AA89F
-bright7=C5C9C5      #C5C9C5
+# regular0=333333     #333333
+# regular1=E46876     #E46876
+# regular2=87A987     #87A987
+# regular3=D7AF87     #D7AF87
+# regular4=7FB4CA     #7FB4CA
+# regular5=938AA9     #938AA9
+# regular6=7AA89F     #7AA89F
+# regular7=C5C9C5     #C5C9C5
+# bright0=333333      #333333
+# bright1=E46876      #E46876
+# bright2=87A987      #87A987
+# bright3=D7AF87      #D7AF87
+# bright4=7FB4CA      #7FB4CA
+# bright5=938AA9      #938AA9
+# bright6=7AA89F      #7AA89F
+# bright7=C5C9C5      #C5C9C5
 
-#    "#0D0C0C",
-#    "#C4746E",
-#    "#8A9A7B",
-#    "#C4B28A",
-#    "#8BA4B0",
-#    "#A292A3",
-#    "#8EA4A2",
-#    "#C8C093",
-#    "#A6A69C",
-#    "#E46876",
-#    "#87A987",
-#    "#E6C384",
-#    "#7FB4CA",
-#    "#938AA9",
-#    "#7AA89F",
-#    "#C5C9C5"
+regular0=0d0c0c
+regular1=c4746e
+regular2=8a9a7b
+regular3=c4b28a
+regular4=8ba4b0
+regular5=a292a3
+regular6=8ea4a2
+regular7=C8C093
+
+bright0=a6a69c
+bright1=E46876
+bright2=87a987
+bright3=E6C384
+bright4=7FB4CA
+bright5=938AA9
+bright6=7AA89F
+bright7=c5c9c5
+
+#  ; selection:
+#  ;   background: '#658594'
+#  ;   foreground: '#C8C093'
+#  ;
+#  ; indexed_colors:
+#  ;   - { index: 16, color: '#b6927b' }
+#  ;   - { index: 17, color: '#ff5d62' }
