--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=adw-gtk3-dark
 gtk-icon-theme-name=MoreWaita
-gtk-font-name=IBM Plex Sans Medium 11
+gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Banana
 gtk-cursor-theme-size=42
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -12,7 +12,7 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=1
 gtk-decoration-layout=appmenu
