--- a/config/tofi/config
+++ b/config/tofi/config
@@ -1,4 +1,4 @@
-anchor = top
+anchor = bottom
 width = 100%
 height = 16
 horizontal = true
@@ -10,7 +10,7 @@ outline-width = 0
 border-width = 0
 min-input-width = 120
 result-spacing = 15
-background-color = #222222
+background-color = #0e0e0e
 
 terminal = tofi
 fuzzy-match = true
@@ -23,7 +23,7 @@ padding-right = 0
 input-color = #eeeeee
 default-result-color = #bbbbbb
 selection-color = #eeeeee
-selection-background = #005577
+selection-background = #333333
 selection-background-padding = 2, 4
 input-background-padding = 2, 4
 alternate-result-background-padding = 2, 4
