--- a/config/book/config.toml
+++ b/config/book/config.toml
@@ -1,5 +1,5 @@
 folderIcon = ""
-menu = "tofi -c ~/.config/tofi/center.config"
+menu = "tofi --anchor=center --horizontal=false --width=40% --height=40% --padding-top=10 --padding-bottom=10 --padding-left=10 --padding-right=10 --result-spacing=9"
 # menu = "fzf"
 run = "xdg-open"
 showUrl = false
