--- a/config/book/personal.conf
+++ b/config/book/personal.conf
@@ -2,30 +2,23 @@
     run = "librewolf -p Personal --new-tab"
 
 [bookmarks]
-    "wysi"                      "https://wysi727.com"
-    "Personal Site Marti"       "https://m4rti.dev"
-    "Nextcloud"                 "https://drive.m4rti.dev"
-    "SearXNG Search Engine"     "https://search.m4rti.dev"
+    "drive"                     "https://drive.m4rti.dev"
     "Spotify"                   "https://open.spotify.com"
-    "Minesweeper"               "https://voo.m4rti.dev"                   
-    "Hyprland Wiki"             "https://wiki.hyprland.org"
-    "AUR Arch User Repository"  "https://aur.archlinux.org"
-    "Arch Linux Wiki"           "https://wiki.archlinux.org"
-    "Luke Smith's Webpage"      "https://lukesmith.xyz"
+    "AUR"                       "https://aur.archlinux.org"
+    "Arch Wiki"                 "https://wiki.archlinux.org"
     "Chat GPT AI"               "https://chat.openai.com"
-    "Discord App"               "https://discord.com/app"
+    "Discord"                   "https://discord.com/app"
     "YouTube"                   "https://youtube.com"
-    "Flatpak Store"             "https://flathub.org"
-    "Twitch Dashboard"          "https://dashboard.twitch.tv/u/m4rti_dev/stream-manager"
+    "wysi"                      "https://wysi727.com"
+    "Proton Mail"               "https://mail.proton.me"
+    "Google Mail"               "https://mail.google.com"
 
-    * GitHub
-        "GitHub Profile Marti"  "https://github.com/m4rti21"
-        "GitHub"                "https://github.com/m4rti21/dotfiles"
-        "GitHub"                "https://github.com/wysi-inc"
-        "GitHub"                "https://github.com/wysi-inc/web"
+    * Git
+        "GitHub M4rti21"               "https://github.com/m4rti21"
+        "GitHub wysi"                  "https://github.com/wysi-inc"
+        "Codeberg Marti"               "https://codeberg.org/Marti"
 
     * Google
-        "Proton Mail"           "https://mail.proton.me"
         "Google Mail Gmail"     "https://mail.google.me"
         "Google Maps"           "https://maps.google.com"
         "Google Translate"      "https://translate.google.com"
