--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,9 @@
 *.conf linguist-vendored=false
 *.conf linguist-vendored=false
 *.json linguist-vendored=false
+*.jsonc linguist-vendored=false
 *.yml linguist-vendored=false
 *.yaml linguist-vendored=false
 *.toml linguist-vendored=false
 *.rasi linguist-vendored=false
+*rc linguist-vendored=false
