--- a/book/.config/book/personal.conf
+++ b/book/.config/book/personal.conf
@@ -1,24 +1,1 @@
-[config]
-    run = "librewolf -p Personal --new-tab"
-
-[bookmarks]
-    "drive"                     "https://drive.m4rti.dev"
-    "Spotify"                   "https://open.spotify.com"
-    "AUR"                       "https://aur.archlinux.org"
-    "Arch Wiki"                 "https://wiki.archlinux.org"
-    "Chat GPT AI"               "https://chat.openai.com"
-    "Discord"                   "https://discord.com/app"
-    "YouTube"                   "https://youtube.com"
-    "wysi"                      "https://wysi727.com"
-    "Proton Mail"               "https://mail.proton.me"
-    "Google Mail"               "https://mail.google.com"
-
-    * Git
-        "GitHub M4rti21"               "https://github.com/m4rti21"
-        "GitHub wysi"                  "https://github.com/wysi-inc"
-        "Codeberg Marti"               "https://codeberg.org/Marti"
-
-    * Google
-        "Google Mail Gmail"     "https://mail.google.me"
-        "Google Maps"           "https://maps.google.com"
-        "Google Translate"      "https://translate.google.com"
+/home/m4rti/Nextcloud/Private/book/personal.conf
