--- a/book/.config/book/study.conf
+++ b/book/.config/book/study.conf
@@ -1,9 +1,1 @@
-[config]
-    run = "librewolf -p Study --new-tab"
-
-[bookmarks]
-    "UOC Dashboard"     "https://aula.uoc.edu"
-    "ALURA"             "https://eimtlogica.uoc.edu/alura/"
-    "Moodle"            "https://moodos.uoc.edu"
-    "Computadors"       "https://aula.uoc.edu/courses/46250"
-    "Logica"            "https://aula.uoc.edu/courses/46076"
+/home/m4rti/Nextcloud/Private/book/study.conf
