--- a/qt/.config/qt5ct/qt5ct.conf
+++ b/qt/.config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb\0\0\0\x1\x2\0\0\0\a\x80\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xbb\0\0\x4#\0\0\0\0\0\0\0\0\0\0\a}\0\0\x4'\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xbb\0\0\x4#)
 
 [Troubleshooting]
 force_raster_widgets=1
