--- a/qt/.config/qt6ct/qt6ct.conf
+++ b/qt/.config/qt6ct/qt6ct.conf
@@ -17,7 +17,7 @@ dialog_buttons_have_icons=0
 double_click_interval=400
 gui_effects=@Invalid()
 keyboard_scheme=2
-menus_have_icons=false
+menus_have_icons=true
 show_shortcuts_in_context_menus=true
 stylesheets=@Invalid()
 toolbutton_style=4
@@ -28,7 +28,7 @@ wheel_scroll_lines=3
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n0\0\0\x1\x84\0\0\f\xa6\0\0\x3\x94\0\0\n0\0\0\x1\x84\0\0\f\xa6\0\0\x3\x94\0\0\0\x1\0\0\0\0\a\x80\0\0\n0\0\0\x1\x84\0\0\f\xa6\0\0\x3\x94)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb\0\0\0\x2\x2\0\0\0\a\x80\0\0\x4\x38\0\0\x1\xa4\0\0\v\xb5\0\0\x5\xcb)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\x3\xbb\0\0\x4#\0\0\0\0\0\0\0\0\0\0\x3\xbb\0\0\x4#\0\0\0\0\0\0\0\0\a\x80\0\0\0\0\0\0\0\0\0\0\x3\xbb\0\0\x4#)
 
 [Troubleshooting]
 force_raster_widgets=1
