--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -8,7 +8,8 @@ height=110
 border-size=2
 border-color=#333333
 border-radius=0
-icons=0
+icons=true
+icon-path=~/.local/share/icons/MoreWaita/
 max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
