--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -8,8 +8,7 @@ height=110
 border-size=2
 border-color=#333333
 border-radius=0
-icons=true
-icon-path=~/.local/share/icons/MoreWaita/
+icons=false
 max-icon-size=64
 default-timeout=5000
 ignore-timeout=1
